fix(systemaddon): Use flex-wrap to force a new line for small width. Closes #3630.

--- a/system-addon/content-src/components/PreferencesPane/_PreferencesPane.scss
+++ b/system-addon/content-src/components/PreferencesPane/_PreferencesPane.scss
@@ -115,7 +115,6 @@
     border-left: $border-secondary;
     bottom: 0;
     offset-inline-end: 0;
-    padding: $prefs-spacing;
     position: fixed;
     width: $prefs-width;
 
